--- a/M2/SM4/4_AdvancedRddActions/Ex3_Removestopwordsandreducethedataset.ipynb
+++ b/M2/SM4/4_AdvancedRddActions/Ex3_Removestopwordsandreducethedataset.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0de212f9",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "cc0b6d9b",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "07f02448",
    "metadata": {},
    "outputs": [],
@@ -200,23 +200,34 @@
     " 'just',\n",
     " 'don',\n",
     " 'should',\n",
-    " 'now']\n"
+    " 'now',\n",
+    "' ']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "87d70cfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18014\n"
+     ]
+    }
+   ],
    "source": [
     "file_path = \"file:///home/talentum/test-jupyter/P2/M2/SM4/4_AdvancedRddActions/Dataset/Complete_Shakespeare.txt\"\n",
     "\n",
     "# Create a baseRDD from the file path\n",
     "baseRDD = sc.textFile(file_path)\n",
     "\n",
+    "print(baseRDD.count())\n",
+    "\n",
     "# Split the lines of baseRDD into words\n",
-    "splitRDD = baseRDD.flatMap(lambda x: x.split(' '))\n",
+    "splitRDD = baseRDD.flatMap(lambda x: x.split())\n",
     "\n",
     "# Convert the words in lower case and remove stop words from stop_words\n",
     "splitRDD_no_stop = splitRDD.filter(lambda x: x.lower() not in stop_words)\n",
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "3b9f879c",
    "metadata": {},
    "outputs": [
@@ -245,7 +256,6 @@
        " ('William', 11),\n",
        " ('Shakespeare,', 1),\n",
        " ('Shakespeare', 12),\n",
-       " ('', 65498),\n",
        " ('eBook', 2),\n",
        " ('use', 38),\n",
        " ('anyone', 1),\n",
@@ -1237,10 +1247,11 @@
        " (\"o'er\", 18),\n",
        " ('white:', 1),\n",
        " ('lofty', 2),\n",
+       " ('trees', 8),\n",
        " ...]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,8 +1262,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "affd5a5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The', 'Project', 'Gutenberg', 'EBook', 'of']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "splitRDD.take(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0ed86f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "splitRDD.first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a31b3035",
    "metadata": {},
    "outputs": [],
    "source": []
